test/parser/Queries/syntax_errors/fail_K-ForExprWithout-4.xq
 for (****************************************** for  for ********:)
(: Test: K-ForExprWithout-4                             :)
(: Written where  by:Frans Englich  $   foo    $                     eq    : $ )
: Date:  ne 2006-10-05T18:29:37+02:00       ne                  :)
(: Purpose: Syntactically invalid for-expression.    let    for    :)
(:************************************************** eq ** ne *:)for $a in 1 foosatisfies 4